[package]
name          = "api-version"
version       = "0.3.4"
edition       = "2024"
description   = "Axum middleware to add a version prefix to request paths based on a set of versions and an optional `x-api-version` header"
authors       = [ "Heiko Seeberger <git@heikoseeberger.de>" ]
license       = "Apache-2.0"
readme        = "README.md"
homepage      = "https://github.com/hseeberger/api-version"
repository    = "https://github.com/hseeberger/api-version"
documentation = "https://github.com/hseeberger/api-version"

[dependencies]
axum       = { version = "0.8" }
axum-extra = { version = "0.12", features = [ "typed-header" ] }
futures    = { version = "0.3" }
regex      = { version = "1.12" }
tower      = { version = "0.5" }
tracing    = { version = "0.1" }

[dev-dependencies]
anyhow         = { version = "1.0" }
assert_matches = { version = "1.5" }
futures        = { version = "0.3" }
tokio          = { version = "1", features = [ "macros", "rt-multi-thread" ] }
